[package]
name = "liquid_code_gen"
edition = "2018"
version = "0.2.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
liquid = "0.19"
liquid-derive = "0.19"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }